--- a/pages/music.html
+++ b/pages/music.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../components/topbar.css">
     <script src="../config.js"></script>
+    <script src="../scripts/settings.js"></script>
     <script src="../scripts/notifications.js"></script>
     <style>
         * {
