--- a/pages/terms.html
+++ b/pages/terms.html
@@ -14,6 +14,7 @@ r
 
 <body>
     <script src="../config.js"></script>
+    <script src="../scripts/settings.js"></script>
     <script src="../components/topbar.js"></script>
 
     <style>
