--- a/index2.html
+++ b/index2.html
@@ -300,6 +300,7 @@
         }
     </style>
     <script src="config.js"></script>
+    <script src="scripts/settings.js"></script>
     <script src="scripts/quotes.js"></script>
     <script src="scripts/notifications.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js"></script>
