--- a/pages/disclaimer.html
+++ b/pages/disclaimer.html
@@ -13,6 +13,7 @@
 
 <body>
     <script src="../config.js"></script>
+    <script src="../scripts/settings.js"></script>
     <script src="../components/topbar.js"></script>
 
     <div style="max-width: 700px; margin: 0 auto; padding: 80px 24px 40px;">
