--- a/pages/games.html
+++ b/pages/games.html
@@ -302,6 +302,7 @@
     </div>
 
     <script src="../config.js"></script>
+    <script src="../scripts/settings.js"></script>
     <script src="../scripts/quotes.js"></script>
     <script src="../scripts/notifications.js"></script>
     <script src="../components/footer.js"></script>
