--- a/pages/movies.html
+++ b/pages/movies.html
@@ -377,6 +377,7 @@
 
         <script src="../scripts/notifications.js"></script>
         <script src="../config.js"></script>
+        <script src="../scripts/settings.js"></script>
         <script src="../scripts/movies.js"></script>
 
         <script src="../components/footer.js"></script>
