movie and music fixxes + more

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -570,7 +570,7 @@
                     <h2 class="section-title"><i class="fa-solid fa-music"></i> Music</h2>
                     <div class="setting-row">
                         <div class="setting-info">
-                            <div class="setting-label">Show Mini Player</div>
+                            <div class="setting-label">Show Mini Player (SOON)</div>
                         </div>
                         <div class="toggle active" id="miniplayer-toggle"></div>
                     </div>
