--- a/pages/movies.html
+++ b/pages/movies.html
@@ -299,6 +299,72 @@
             100% {
                 background-position: -200% 0;
             }
+
+            100% {
+                background-position: -200% 0;
+            }
+        }
+
+        .load-more-card {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: var(--surface);
+            border: 2px dashed var(--border);
+            border-radius: 12px;
+            cursor: pointer;
+            transition: all 0.2s;
+            min-height: 220px;
+        }
+
+        .load-more-card:hover {
+            background: var(--surface-hover);
+            border-color: var(--text);
+        }
+
+        .load-more-content {
+            text-align: center;
+            color: var(--text-muted);
+        }
+
+        .load-more-content i {
+            display: block;
+            font-size: 2rem;
+            margin-bottom: 8px;
+        }
+
+        /* Improved Card Typography & Rating */
+        .media-card-overview {
+            font-size: 0.85rem;
+            line-height: 1.4;
+            display: -webkit-box;
+            -webkit-line-clamp: 6;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            color: #fff;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
+            font-weight: 500;
+        }
+
+        .media-card-rating {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: rgba(0, 0, 0, 0.85);
+            color: #fbbf24;
+            padding: 4px 8px;
+            border-radius: 6px;
+            font-size: 0.85rem;
+            font-weight: 700;
+            z-index: 20;
+            border: 1px solid rgba(251, 191, 36, 0.3);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+        }
+
+        /* Dropdown Styling */
+        #genre-select option {
+            background: var(--bg);
+            color: var(--text);
         }
     </style>
 </head>
@@ -360,27 +426,28 @@
                 <div class="skeleton" style="width:100%;height:100%;"></div>
             </div>
         </div>
+    </div>
 
 
 
-        <!-- Season Explorer -->
-        <div class="season-explorer" id="season-explorer">
-            <div class="season-explorer-header">
-                <span class="season-explorer-title" id="show-title">Select Episode</span>
-                <button class="season-explorer-close" onclick="closeSeasonExplorer()"><i
-                        class="fa-solid fa-xmark"></i></button>
-            </div>
-            <div class="seasons-list" id="seasons-list"></div>
-            <div class="episodes-list" id="episodes-list"></div>
+    <!-- Season Explorer -->
+    <div class="season-explorer" id="season-explorer">
+        <div class="season-explorer-header">
+            <span class="season-explorer-title" id="show-title">Select Episode</span>
+            <button class="season-explorer-close" onclick="closeSeasonExplorer()"><i
+                    class="fa-solid fa-xmark"></i></button>
         </div>
+        <div class="seasons-list" id="seasons-list"></div>
+        <div class="episodes-list" id="episodes-list"></div>
+    </div>
 
 
-        <script src="../scripts/notifications.js"></script>
-        <script src="../config.js"></script>
-        <script src="../scripts/settings.js"></script>
-        <script src="../scripts/movies.js"></script>
+    <script src="../scripts/notifications.js"></script>
+    <script src="../config.js"></script>
+    <script src="../scripts/settings.js"></script>
+    <script src="../scripts/movies.js"></script>
 
-        <script src="../components/footer.js"></script>
+    <script src="../components/footer.js"></script>
 </body>
 
 </html>
