--- a/pages/music.html
+++ b/pages/music.html
@@ -7,7 +7,7 @@
     <title>Music - Phantom</title>
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../all.css">
+    <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../components/topbar.css">
     <script src="../config.js"></script>
     <script src="../Utils/notifications.js"></script>
