--- a/pages/movies.html
+++ b/pages/movies.html
@@ -141,6 +141,7 @@
         /* Grid */
         .media-grid {
             display: grid;
+            /* Grid: Change '140px' to a smaller number (e.g. 100px) for more movies per row */
             grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
             gap: 14px;
             max-width: 1200px;
