--- a/index.html
+++ b/index.html
@@ -101,6 +101,42 @@
             font-size: 0.875rem;
         }
 
+        .launch-screen {
+            position: fixed;
+            inset: 0;
+            background: var(--bg, #0a0a0a);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+        }
+
+        .launch-screen.hidden {
+            display: none;
+        }
+
+        .launch-button {
+            background: var(--surface);
+            color: var(--text-muted);
+            border: none;
+            padding: 24px 48px;
+            border-radius: var(--radius-lg);
+            font-size: 1.25rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: opacity 0.2s;
+            margin-top: 16px;
+            width: 100%;
+            max-width: 300px;
+            opacity: 0.75;
+        }
+
+        .launch-button:hover {
+            opacity: 0.5;
+        }
+
+
         iframe {
             width: 100%;
             height: 100%;
@@ -121,6 +157,25 @@
     <!-- First Visit Cloak Layer -->
     <div id="fv-cloak"></div>
 
+    <!-- Loading Screen -->
+    <div id="loading-screen" class="loading-screen">
+        <div class="loading-logo">
+            <i class="fa-solid fa-ghost"></i>
+            <span>Phantom</span>
+        </div>
+        <div class="loading-spinner"></div>
+        <div class="loading-text">Loading...</div>
+    </div>
+
+    <!-- Launch Screen -->
+    <div id="launch-screen" class="launch-screen hidden">
+        <div class="loading-logo">
+            <i class="fa-solid fa-ghost"></i>
+            <span>Phantom</span>
+        </div>
+        <button id="launch-button" class="launch-button"> Launch Phantom</button>
+    </div>
+
     <iframe id="main-frame"></iframe>
 
     <!-- First Visit Cloak Logic -->
@@ -130,11 +185,87 @@
             var overlay = document.getElementById('fv-cloak');
             var iframe = document.getElementById('main-frame');
 
+            // Check for ?fake parameter
+            const urlParams = new URLSearchParams(window.location.search);
+            const isFakeMode = urlParams.has('fake');
+
             // Check config
             var cloakEnabled = window.SITE_CONFIG && window.SITE_CONFIG.firstVisitCloak !== false;
-            var isCloaked = cloakEnabled && !localStorage.getItem(STORAGE_KEY);
+            var isCloaked = cloakEnabled && !localStorage.getItem(STORAGE_KEY) && !isFakeMode;
 
-            if (isCloaked) {
+            if (isFakeMode) {
+                // Show launch screen for ?fake mode
+                document.getElementById('loading-screen').classList.add('hidden');
+                document.getElementById('launch-screen').classList.remove('hidden');
+                document.getElementById('launch-button').addEventListener('click', () => {
+                    document.getElementById('launch-screen').classList.add('hidden');
+                    // Load settings
+                    let settings = {};
+                    try { settings = JSON.parse(localStorage.getItem('void_settings') || '{}'); } catch { }
+                    const cloakMode = settings.cloakMode || 'none';
+                    const realUrl = window.location.href.replace(/\?fake/, '');
+                    const doRedirect = () => {
+                        const targets = ['https://www.youtube.com', 'https://edpuzzle.com'];
+                        const randomTarget = targets[Math.floor(Math.random() * targets.length)];
+                        window.location.replace(randomTarget);
+                    };
+                    let popupOpened = false;
+                    if (cloakMode === 'blob') {
+                        fetch(realUrl).then(r => r.text()).then(html => {
+                            const blob = new Blob([html], { type: 'text/html' });
+                            const win = window.open(URL.createObjectURL(blob), '_blank');
+                            if (win) {
+                                popupOpened = true;
+                                doRedirect();
+                            } else {
+                                // Fallback
+                                iframe.src = 'index2.html';
+                            }
+                        }).catch(() => {
+                            // Fallback
+                            iframe.src = 'index2.html';
+                        });
+                    } else if (cloakMode === 'about:blank') {
+                        const win = window.open('about:blank', '_blank');
+                        if (win) {
+                            popupOpened = true;
+                            win.document.open();
+                            win.document.write('<iframe src="' + realUrl + '" style="position:fixed;inset:0;width:100%;height:100%;border:none;"></iframe>');
+                            win.document.close();
+                            // Copy disguised title/icon to new window
+                            if (settings.tabTitle) win.document.title = settings.tabTitle;
+                            if (settings.tabFavicon) {
+                                const link = win.document.createElement('link');
+                                link.rel = 'icon';
+                                link.href = settings.tabFavicon;
+                                win.document.head.appendChild(link);
+                            }
+                            doRedirect();
+                        } else {
+                            // Fallback
+                            iframe.src = 'index2.html';
+                        }
+                    } else {
+                        // No cloak, open directly
+                        const win = window.open(realUrl, '_blank');
+                        if (win) {
+                            popupOpened = true;
+                            doRedirect();
+                        } else {
+                            // Fallback
+                            iframe.src = 'index2.html';
+                        }
+                    }
+                    // If popup was opened, check if it closed
+                    if (popupOpened) {
+                        setTimeout(() => {
+                            if (win && win.closed) {
+                                // Show launch screen again or something
+                            }
+                        }, 1000);
+                    }
+                });
+            } else if (isCloaked) {
                 // Show white screen
                 overlay.style.display = 'block';
                 // Remove title tag to show URL/filename
@@ -246,7 +377,14 @@
             try { settings = JSON.parse(localStorage.getItem(STORAGE_KEY) || '{}'); } catch { }
             const cloakMode = settings.cloakMode || 'none';
 
-            if (window.top === window.self && cloakMode !== 'none') {
+            // Check for ?fake parameter
+            const urlParams = new URLSearchParams(window.location.search);
+            const isFakeMode = urlParams.has('fake');
+
+            if (isFakeMode) {
+                // Show launch screen for ?fake mode
+                showLaunchScreen();
+            } else if (window.top === window.self && cloakMode !== 'none') {
                 const currentUrl = window.location.href;
                 const doRedirect = () => {
                     const targets = ['https://www.youtube.com', 'https://edpuzzle.com'];
@@ -254,15 +392,25 @@
                     window.location.replace(randomTarget);
                 };
 
+                let popupOpened = false;
+
                 if (cloakMode === 'blob') {
                     fetch(currentUrl).then(r => r.text()).then(html => {
                         const blob = new Blob([html], { type: 'text/html' });
                         const win = window.open(URL.createObjectURL(blob), '_blank');
-                        if (win) doRedirect();
-                    }).catch(() => { });
+                        if (win) {
+                            popupOpened = true;
+                            doRedirect();
+                        } else {
+                            showLaunchScreen();
+                        }
+                    }).catch(() => {
+                        showLaunchScreen();
+                    });
                 } else if (cloakMode === 'about:blank') {
                     const win = window.open('about:blank', '_blank');
                     if (win) {
+                        popupOpened = true;
                         win.document.open();
                         win.document.write('<iframe src="' + currentUrl + '" style="position:fixed;inset:0;width:100%;height:100%;border:none;"></iframe>');
                         win.document.close();
@@ -277,9 +425,27 @@
                         }
                         doRedirect();
                     } else {
-                        alert("ENABLE POPUPS");
+                        showLaunchScreen();
                     }
                 }
+
+                // If popup was opened, check if it closed
+                if (popupOpened) {
+                    setTimeout(() => {
+                        if (win && win.closed) {
+                            showLaunchScreen();
+                        }
+                    }, 1000);
+                }
+            }
+
+            function showLaunchScreen() {
+                document.getElementById('launch-screen').classList.remove('hidden');
+                document.getElementById('launch-button').addEventListener('click', () => {
+                    document.getElementById('launch-screen').classList.add('hidden');
+                    // Load the app content
+                    document.getElementById('main-frame').src = 'index2.html';
+                });
             }
         })();
     </script>
