--- a/index2.html
+++ b/index2.html
@@ -229,58 +229,6 @@
             gap: 8px;
         }
 
-        /* Discord Widget - Closable */
-        .discord-widget {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 1000;
-        }
-
-        .discord-btn {
-            width: 50px;
-            height: 50px;
-            background: #5865F2;
-            border: none;
-            border-radius: 50%;
-            color: white;
-            font-size: 1.25rem;
-            cursor: pointer;
-            box-shadow: 0 4px 16px rgba(88, 101, 242, 0.4);
-            transition: transform 0.2s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .discord-btn:hover {
-            transform: scale(1.1);
-        }
-
-        .discord-popup {
-            display: none;
-            position: fixed;
-            bottom: 80px;
-            right: 20px;
-            width: 350px;
-            height: 450px;
-            background: var(--surface);
-            border: 1px solid var(--border);
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
-        }
-
-        .discord-popup.show {
-            display: block;
-        }
-
-        .discord-popup iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-
         @media (max-width: 640px) {
             .site-title {
                 font-size: 1.75rem;
@@ -291,12 +239,7 @@
                 gap: 8px;
             }
 
-            .discord-popup {
-                width: 280px;
-                height: 380px;
-                right: 10px;
-                bottom: 70px;
-            }
+
         }
     </style>
     <script src="config.js"></script>
@@ -345,16 +288,6 @@
 
     </div>
 
-    <!-- Discord Widget -->
-    <div class="discord-widget" id="discord-widget">
-        <button class="discord-btn" id="discord-btn" title="Discord">
-            <i class="fa-brands fa-discord" id="discord-icon"></i>
-        </button>
-    </div>
-
-    <div class="discord-popup" id="discord-popup">
-        <iframe id="discord-frame" src="about:blank"></iframe>
-    </div>
 
     <script>
         // Featured games
@@ -380,7 +313,7 @@
             card.className = 'featured-card';
             card.innerHTML = `
                 <div class="featured-card-icon" style="background: ${g.img ? 'transparent' : 'var(--surface-hover)'}; color: var(--text-muted);">
-                    ${g.img ? `<img src="${g.img}" onerror="this.parentElement.innerHTML='<i class=\\'fa-solid fa-gamepad\\'></i>'">` : `<i class="${g.icon}"></i>`}
+                    ${g.img ? `<img src="${g.img}" onerror="this.parentElement.style.background='var(--surface-hover)'; this.parentElement.innerHTML='<i class=\\'fa-solid fa-gamepad\\'></i>'">` : `<i class="${g.icon}"></i>`}
                 </div>
                 <div class="featured-card-title">${g.name}</div>
             `;
@@ -412,27 +345,7 @@
             window.location.href = 'staticsjv2/index.html#' + encodeURIComponent(url);
         }
 
-        // Discord widget toggle
-        let discordOpen = false;
-        const discordBtn = document.getElementById('discord-btn');
-        const discordIcon = document.getElementById('discord-icon');
-        const discordPopup = document.getElementById('discord-popup');
-        const discordFrame = document.getElementById('discord-frame');
-
-        discordBtn.onclick = () => {
-            discordOpen = !discordOpen;
-            if (discordOpen) {
-                discordPopup.classList.add('show');
-                discordIcon.className = 'fa-solid fa-xmark';
-                // Load via staticsjv2
-                discordFrame.src = 'staticsjv2/embed.html#' + window.location.origin + '/pages/chat.html';
-            } else {
-                discordPopup.classList.remove('show');
-                discordIcon.className = 'fa-brands fa-discord';
-                discordFrame.src = 'about:blank';
-            }
-        };
-
+    
         // Check setting
         try {
             const settings = JSON.parse(localStorage.getItem('void_settings') || '{}');
