--- a/pages/games.html
+++ b/pages/games.html
@@ -160,7 +160,7 @@
             position: relative;
             width: 100%;
             aspect-ratio: 4/3;
-            background: #000;
+            background: transparent;
             overflow: hidden;
         }
 
