--- a/pages/disclaimer.html
+++ b/pages/disclaimer.html
@@ -24,7 +24,7 @@
 
             <h2 style="font-size: 1.125rem; color: var(--text); margin: 24px 0 12px;">Educational Purpose</h2>
             <p style="margin-bottom: 16px;">Phantom Unblocked is intended for educational and entertainment purposes
-                only. This service is designed to demonstrate web technologies and provide access to educational
+                only. This service is designed to demonstrate web technologies and provide access to unrestricted educational
                 resources.</p>
 
             <h2 style="font-size: 1.125rem; color: var(--text); margin: 24px 0 12px;">Third-Party Content</h2>
