--- a/staticsjv2/index.html
+++ b/staticsjv2/index.html
@@ -13,6 +13,7 @@
         window.BareMux = BareMux;
     </script>
     <script src="../config.js"></script>
+    <script src="../scripts/settings.js"></script>
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="style.css">
     <script src="../scripts/notifications.js"></script>
