--- a/pages/settings.html
+++ b/pages/settings.html
@@ -125,6 +125,15 @@
                         <!-- Presets injected by JS -->
                     </div>
 
+                    <div class="setting-row"
+                        style="margin-top: 16px; border-top: 1px solid var(--border); padding-top: 16px;">
+                        <div class="setting-info">
+                            <div class="setting-label">Rotate Theme</div>
+                            <div class="setting-desc">Automatically rotate theme every 2 days</div>
+                        </div>
+                        <div class="toggle" id="theme-rotation-toggle"></div>
+                    </div>
+
                     <h2 class="section-title"><i class="fa-solid fa-palette"></i> Custom Theme</h2>
                     <div class="setting-row">
                         <div class="setting-info">
